<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.auth_number_verification_fragment.AuthNumberVerificationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/authNumberVerificationGoBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/go_back"
            android:minHeight="@dimen/minButtonHeight"
            android:src="@drawable/ic_nav_back" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="@dimen/marginContainer"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginContainer"
            android:layout_marginVertical="@dimen/marginSubContainer"
            android:text="@string/verification_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authNumberVerificationTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginContainer"
            app:boxCornerRadiusBottomEnd="@dimen/buttonBorderRadius"
            app:boxCornerRadiusBottomStart="@dimen/buttonBorderRadius"
            app:boxCornerRadiusTopEnd="@dimen/buttonBorderRadius"
            app:boxCornerRadiusTopStart="@dimen/buttonBorderRadius"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authNumberVerificationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="@integer/phone_number_max_length"
                android:minHeight="@dimen/minButtonHeight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/authNumberVerificationTimerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginContainer"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:textAlignment="center"
            />
        <TextView
            android:id="@+id/authNumberVerificationResendTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/submit_code_again"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/marginContainer"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/authNumberVerificationGoOnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginContainer"
            android:text="@string/go_on"
            android:enabled="false"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>